--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,14 @@
 	</dependencies>
 
 	<build>
-		<plugins>
+		<plugins> 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+	    <finalName>${project.name}</finalName>
+
 	</build>
 
 
